// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headroom should render correct if state is pinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={false}
    top={0}
    transition={true}
    translateY={0}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Headroom__HeaderWrapper-qwvfn8-0",
            "isStatic": false,
            "lastClassName": "idaFGb",
            "rules": Array [
              "position:",
              [Function],
              ";top:",
              [Function],
              "px;z-index:1;transform:translateY(",
              [Function],
              "px);",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "Headroom__HeaderWrapper",
          "render": [Function],
          "styledComponentId": "Headroom__HeaderWrapper-qwvfn8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      static={false}
      top={0}
      transition={true}
      translateY={0}
    >
      <div
        className="Headroom__HeaderWrapper-qwvfn8-0 idaFGb"
      >
        <MockNode>
          <div />
        </MockNode>
      </div>
    </StyledComponent>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={100}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is static, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Headroom__HeaderWrapper-qwvfn8-0",
            "isStatic": false,
            "lastClassName": "WKjpn",
            "rules": Array [
              "position:",
              [Function],
              ";top:",
              [Function],
              "px;z-index:1;transform:translateY(",
              [Function],
              "px);",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "Headroom__HeaderWrapper",
          "render": [Function],
          "styledComponentId": "Headroom__HeaderWrapper-qwvfn8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      static={true}
      top={-50}
      transition={false}
      translateY={0}
    >
      <div
        className="Headroom__HeaderWrapper-qwvfn8-0 WKjpn"
      >
        <MockNode>
          <div />
        </MockNode>
      </div>
    </StyledComponent>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={false}
    top={0}
    transition={false}
    translateY={-50}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Headroom__HeaderWrapper-qwvfn8-0",
            "isStatic": false,
            "lastClassName": "yHOUW",
            "rules": Array [
              "position:",
              [Function],
              ";top:",
              [Function],
              "px;z-index:1;transform:translateY(",
              [Function],
              "px);",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "Headroom__HeaderWrapper",
          "render": [Function],
          "styledComponentId": "Headroom__HeaderWrapper-qwvfn8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      static={false}
      top={0}
      transition={false}
      translateY={-50}
    >
      <div
        className="Headroom__HeaderWrapper-qwvfn8-0 yHOUW"
      >
        <MockNode>
          <div />
        </MockNode>
      </div>
    </StyledComponent>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={false}
    top={0}
    transition={true}
    translateY={-50}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Headroom__HeaderWrapper-qwvfn8-0",
            "isStatic": false,
            "lastClassName": "fEIvuW",
            "rules": Array [
              "position:",
              [Function],
              ";top:",
              [Function],
              "px;z-index:1;transform:translateY(",
              [Function],
              "px);",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "Headroom__HeaderWrapper",
          "render": [Function],
          "styledComponentId": "Headroom__HeaderWrapper-qwvfn8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      static={false}
      top={0}
      transition={true}
      translateY={-50}
    >
      <div
        className="Headroom__HeaderWrapper-qwvfn8-0 fEIvuW"
      >
        <MockNode>
          <div />
        </MockNode>
      </div>
    </StyledComponent>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render with no stickyAncestor supplied 1`] = `
<Fragment>
  <Headroom__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <MockNode />
  </Headroom__HeaderWrapper>
</Fragment>
`;

exports[`Headroom should render with values from its state 1`] = `
<Headroom
  height={100}
  pinStart={0}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Headroom__HeaderWrapper-qwvfn8-0",
            "isStatic": false,
            "lastClassName": "WKjpn",
            "rules": Array [
              "position:",
              [Function],
              ";top:",
              [Function],
              "px;z-index:1;transform:translateY(",
              [Function],
              "px);",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "Headroom__HeaderWrapper",
          "render": [Function],
          "styledComponentId": "Headroom__HeaderWrapper-qwvfn8-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      static={true}
      top={-50}
      transition={false}
      translateY={0}
    >
      <div
        className="Headroom__HeaderWrapper-qwvfn8-0 WKjpn"
      >
        <MockNode>
          <div />
        </MockNode>
      </div>
    </StyledComponent>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;
